# neurorhs

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
data/gml/: 20n.gml
models/ru/: Кинетические модели синаптической передачи и ионных каналов - Table 1.csv
models/ru/synapses/: dummy_delay.md
neurorhs/: default_params.py  io.py  neurosci.py  utils.py
neurorhs/__deprecated/: neuro.py  utils.py
neurorhs/configs/: default.py
neurorhs/preprocessing/: graph_to_arrays.py  preprocess.py
tests/: conftest.py  test_graph.py  test_sim.py  test_utils.py
